# codexproject

./: README.md  pyproject.toml
asr/: transcriber.py
config/: .env.example  settings.py
db/: schema.prisma
diarization/: diarizer.py
docs/: ARCHITECTURE.md
ingest/: audio_processor.py
nlp/: llm_evaluator.py
pipeline/: __init__.py  service.py
scoring/: metrics.py
scripts/: analyze_call
src/: .gitkeep
tests/: .gitkeep
utils/: logging.py
web/: README.md  __init__.py  server.py
web/frontend/: app.js  index.html  styles.css
